--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7672c0a6",
+   "metadata": {},
+   "source": [
+    "## Import Required Libraries\n",
+    "This cell imports the necessary Python libraries for data manipulation, visualization, and machine learning tasks. Libraries include:\n",
+    "- `numpy` and `pandas` for data handling.\n",
+    "- `matplotlib` and `seaborn` for data visualization.\n",
+    "- `sklearn` modules for data preprocessing, model training, evaluation, and dimensionality reduction."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "df90d0ad",
@@ -16,6 +28,15 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, recall_score, f1_score, classification_report\n",
     "from sklearn.decomposition import PCA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f68cd892",
+   "metadata": {},
+   "source": [
+    "## Load the Dataset\n",
+    "This cell loads the breast cancer dataset from the `data.csv` file into a pandas DataFrame (`df`) and displays the entire DataFrame to inspect its structure and contents."
    ]
   },
   {
@@ -418,6 +439,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9fb08935",
+   "metadata": {},
+   "source": [
+    "## Display Dataset Information\n",
+    "This cell uses the `info()` method to provide a summary of the DataFrame, including the number of entries, column names, data types, and non-null counts, helping to understand the dataset's structure."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "9a305299",
@@ -475,6 +505,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "264ca7bd",
+   "metadata": {},
+   "source": [
+    "## Check for Missing Values\n",
+    "This cell checks for missing values in each column of the DataFrame using `isnull().sum()` to identify any data quality issues that need to be addressed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "e2bc0e91",
@@ -529,6 +568,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dd13e50c",
+   "metadata": {},
+   "source": [
+    "## Remove Unnecessary Column\n",
+    "This cell drops the `Unnamed: 32` column from the DataFrame, as it contains only missing values (NaN) and is irrelevant for analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "d7bc2788",
@@ -536,6 +584,15 @@
    "outputs": [],
    "source": [
     "df = df.drop('Unnamed: 32', axis=1) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a08f7889",
+   "metadata": {},
+   "source": [
+    "## Convert Diagnosis Labels to Binary\n",
+    "This cell maps the categorical values in the `diagnosis` column of the DataFrame (`df`) to binary numeric values, where `'M'` (Malignant) is converted to `1` and `'B'` (Benign) is converted to `0`. This transformation prepares the target variable for machine learning tasks."
    ]
   },
   {
@@ -938,8 +995,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f2e16548",
+   "metadata": {},
+   "source": [
+    "## Prepare Data for Training, Validation, and Testing\n",
+    "This cells performs the following steps:\n",
+    "1. **Separate Features and Target**: Splits the dataset into features (`X`) by dropping the `diagnosis` column and target (`y`) as the `diagnosis` column.\n",
+    "2. **Scale Features**: Applies `StandardScaler` to standardize the features in `X`, ensuring they have a mean of 0 and a standard deviation of 1.\n",
+    "3. **First Split**: Divides the scaled data into 80% training+validation (`X_temp`, `y_temp`) and 20% test sets (`X_test`, `y_test`) using `train_test_split` with stratification to maintain class distribution.\n",
+    "4. **Second Split**: Further splits the training+validation set into 75% training (`X_train`, `y_train`, 60% of total) and 25% validation (`X_val`, `y_val`, 20% of total) sets, again with stratification.\n",
+    "5. **Print Split Sizes**: Displays the number of samples and percentage of the total dataset for the training, validation, and test sets."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "10ae9c1f",
    "metadata": {},
    "outputs": [],
@@ -1006,8 +1077,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c27f9a4",
+   "metadata": {},
+   "source": [
+    "## Hyperparameter Tuning for KNN\n",
+    "This cells perform the following tasks to select the optimal number of neighbors (`K`) for the K-Nearest Neighbors (KNN) classifier:\n",
+    "1. **Define K Range**: Creates a range of `K` values from 1 to 20 to test.\n",
+    "2. **Train and Evaluate KNN Models**: For each `K`, trains a KNN classifier on the training set (`X_train`, `y_train`), predicts on the validation set (`X_val`), and computes the validation accuracy using `accuracy_score`.\n",
+    "3. **Store Accuracies**: Appends each validation accuracy to a list (`val_accuracies`) and prints the accuracy for each `K`.\n",
+    "4. **Select Best K**: Identifies the `K` value with the highest validation accuracy and prints the best `K` and its corresponding accuracy.\n",
+    "5. **Visualize Results**: Plots a line graph of validation accuracy versus `K`, with markers at each `K` value, to visualize the performance trend."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "8cc6ee81",
    "metadata": {},
    "outputs": [
@@ -1015,26 +1100,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K=1, Validation Accuracy: 0.9561\n",
-      "K=2, Validation Accuracy: 0.9737\n",
-      "K=3, Validation Accuracy: 0.9649\n",
-      "K=4, Validation Accuracy: 0.9737\n",
-      "K=5, Validation Accuracy: 0.9737\n",
-      "K=6, Validation Accuracy: 0.9737\n",
-      "K=7, Validation Accuracy: 0.9737\n",
-      "K=8, Validation Accuracy: 0.9737\n",
-      "K=9, Validation Accuracy: 0.9737\n",
-      "K=10, Validation Accuracy: 0.9737\n",
-      "K=11, Validation Accuracy: 0.9737\n",
-      "K=12, Validation Accuracy: 0.9737\n",
-      "K=13, Validation Accuracy: 0.9737\n",
-      "K=14, Validation Accuracy: 0.9737\n",
-      "K=15, Validation Accuracy: 0.9737\n",
-      "K=16, Validation Accuracy: 0.9737\n",
-      "K=17, Validation Accuracy: 0.9737\n",
-      "K=18, Validation Accuracy: 0.9737\n",
-      "K=19, Validation Accuracy: 0.9737\n",
-      "K=20, Validation Accuracy: 0.9649\n"
+      "Optimal K: 2\n",
+      "Test Accuracy: 0.8947368421052632\n"
      ]
     }
    ],
@@ -1075,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "e32f6ee9",
    "metadata": {},
    "outputs": [
@@ -1098,8 +1165,16 @@
     "plt.ylabel('Validation Accuracy')\n",
     "plt.title('Validation Accuracy vs. K')\n",
     "plt.grid(True)\n",
-    "plt.savefig('validation_accuracy_vs_k.png')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d17f040b",
+   "metadata": {},
+   "source": [
+    "## Perform Cross-Validation with Best K\n",
+    "This cell conducts 5-fold cross-validation on the training set using the K-Nearest Neighbors (KNN) classifier with the optimal `K` value (`best_k`) determined from hyperparameter tuning. The `cross_val_score` function computes accuracy scores for each fold, storing them in `cv_scores` to evaluate the model's robustness and consistency across different subsets of the training data."
    ]
   },
   {
@@ -1137,6 +1212,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d94e0884",
+   "metadata": {},
+   "source": [
+    "## Train and Test KNN Model with Best K\n",
+    "This cell performs the following steps:\n",
+    "1. **Train Model**: Fits the K-Nearest Neighbors (KNN) classifier with the optimal `K` value (`best_k`) on the training set (`X_train`, `y_train`).\n",
+    "2. **Predict on Test Set**: Uses the trained model to make predictions on the test set (`X_test`), storing the results in `y_pred` for subsequent evaluation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "27c81df0",
@@ -1148,6 +1234,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "659bd560",
+   "metadata": {},
+   "source": [
+    "## Compute Confusion Matrix\n",
+    "This cell calculates the confusion matrix for the K-Nearest Neighbors (KNN) model's predictions on the test set (`y_pred`) compared to the true test labels (`y_test`). The confusion matrix (`cm`) summarizes the counts of true positives, true negatives, false positives, and false negatives, providing insight into the model's classification performance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4347a300",
@@ -1155,6 +1250,20 @@
    "outputs": [],
    "source": [
     "cm = confusion_matrix(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dff1a11b",
+   "metadata": {},
+   "source": [
+    "## Calculate Performance Metrics\n",
+    "This cell computes key performance metrics for the K-Nearest Neighbors (KNN) model on the test set:\n",
+    "- **Accuracy**: The proportion of correct predictions (`accuracy_score`).\n",
+    "- **Precision**: The proportion of true positive predictions among all positive predictions (`precision_score`).\n",
+    "- **Recall**: The proportion of true positives correctly identified (`recall_score`).\n",
+    "- **F1 Score**: The harmonic mean of precision and recall (`f1_score`).\n",
+    "These metrics evaluate the model's effectiveness in classifying the test data."
    ]
   },
   {
@@ -1224,6 +1333,21 @@
     "plt.title('Confusion Matrix')\n",
     "plt.savefig('confusion_matrix.png')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5bafb61",
+   "metadata": {},
+   "source": [
+    "## Overfitting Analysis and Feature Selection with PCA\n",
+    "This cell performs the following tasks to analyze overfitting and improve the K-Nearest Neighbors (KNN) model:\n",
+    "1. **Training Accuracy**: Computes the accuracy of the KNN model with the best `K` on the training set (`X_train`, `y_train`) to compare with other metrics.\n",
+    "2. **Display Performance Metrics**: Prints the training accuracy, validation accuracy (from hyperparameter tuning), test accuracy, and mean cross-validation accuracy to assess model performance across datasets.\n",
+    "3. **Overfitting Check**: Evaluates potential overfitting by checking if the training accuracy exceeds the test accuracy by more than 0.08 (8%). Prints a warning if overfitting is detected, or confirms no significant overfitting otherwise.\n",
+    "4. **Feature Selection with PCA**: Applies Principal Component Analysis (PCA) to reduce the feature space to 10 components, transforming the training (`X_train_pca`), validation (`X_val_pca`), and test (`X_test_pca`) sets to mitigate overfitting and improve generalization.\n",
+    "5. **Retrain KNN with PCA**: Trains a new KNN model with the best `K` on the PCA-transformed training data.\n",
+    "6. **Evaluate PCA Model**: Predicts on the PCA-transformed test set and computes the test accuracy (`test_accuracy_pca`). Prints the accuracy and a detailed classification report, including precision, recall, and F1-score for both classes (`Benign` and `Malignant`)."
    ]
   },
   {
@@ -1783,6 +1907,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b4fb913e",
+   "metadata": {},
+   "source": [
+    "## Apply PCA for 2D Visualization\n",
+    "This cell applies Principal Component Analysis (PCA) to reduce the dimensionality of the scaled feature set (`X_scaled`) to two components, creating `X_2d`. This transformation enables 2D visualization of the breast cancer dataset, preserving the most significant variance in the data for plotting purposes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "3a6d10e5",
@@ -1818,6 +1951,15 @@
     "plt.ylabel('PCA Component 2')\n",
     "plt.title('2D Visualization of Breast Cancer Dataset')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "791416e7",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "This project successfully implemented a K-Nearest Neighbors (KNN) classifier to predict breast cancer diagnoses (Benign or Malignant) using the breast cancer dataset. Key steps included data preprocessing (handling missing values, encoding labels, and scaling features), dimensionality reduction with PCA for visualization and feature selection, hyperparameter tuning to select the optimal `K`, and model evaluation using accuracy, precision, recall, F1-score, and cross-validation. The analysis also addressed overfitting by comparing training, validation, and test accuracies and applying PCA to reduce feature dimensionality. The final model, trained on PCA-transformed data with 10 components, achieved strong performance, as evidenced by the classification report. The 2D PCA visualization further confirmed clear separability between classes, highlighting the dataset's structure. This project demonstrates the effectiveness of KNN for classification tasks and the importance of preprocessing and feature engineering in improving model performance."
    ]
   }
  ],
