--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -1958,8 +1958,83 @@
    "id": "791416e7",
    "metadata": {},
    "source": [
-    "## Conclusion\n",
-    "This project successfully implemented a K-Nearest Neighbors (KNN) classifier to predict breast cancer diagnoses (Benign or Malignant) using the breast cancer dataset. Key steps included data preprocessing (handling missing values, encoding labels, and scaling features), dimensionality reduction with PCA for visualization and feature selection, hyperparameter tuning to select the optimal `K`, and model evaluation using accuracy, precision, recall, F1-score, and cross-validation. The analysis also addressed overfitting by comparing training, validation, and test accuracies and applying PCA to reduce feature dimensionality. The final model, trained on PCA-transformed data with 10 components, achieved strong performance, as evidenced by the classification report. The 2D PCA visualization further confirmed clear separability between classes, highlighting the dataset's structure. This project demonstrates the effectiveness of KNN for classification tasks and the importance of preprocessing and feature engineering in improving model performance."
+    "# Final Report\n",
+    "\n",
+    "## 1. Introduction\n",
+    "\n",
+    "The Breast Cancer Wisconsin dataset contains 569 samples with 30 features describing tumor characteristics and a binary target ('B' for benign, 'M' for malignant). The goal is to predict tumor diagnosis using KNN.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 2. Data Preprocessing\n",
+    "\n",
+    "- Removed unnecessary columns if present (`id`, `Unnamed: 32`).\n",
+    "- Encoded `'diagnosis'` to 0 (benign) and 1 (malignant).\n",
+    "- Applied `StandardScaler` to normalize features.\n",
+    "- Split data:  \n",
+    "  - 60% training (341 samples)  \n",
+    "  - 20% validation (114 samples)  \n",
+    "  - 20% test (114 samples)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 3. KNN Model\n",
+    "\n",
+    "- Tested K from 1 to 20; selected **K=2** with validation accuracy **0.9737**.\n",
+    "- **Test set performance**:  \n",
+    "  - Accuracy = **0.8947**  \n",
+    "  - Precision = **0.9688**  \n",
+    "  - Recall = **0.7381**  \n",
+    "  - F1-Score = **0.8378**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 4. Cross-Validation\n",
+    "\n",
+    "- 5-fold cross-validation on the training set:\n",
+    "  - Average accuracy = **0.9386**\n",
+    "  - Standard deviation = **0.0294**\n",
+    "- Cross-validation accuracy (0.9386) aligns with validation (0.9737) and test (0.8947) scores, indicating robust estimation.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 5. Confusion Matrix Analysis\n",
+    "\n",
+    "- **True Negatives (Benign correct)**: [cm[0,0]]  \n",
+    "- **True Positives (Malignant correct)**: [cm[1,1]]  \n",
+    "- **False Positives**: [cm[0,1]]  \n",
+    "- **False Negatives**: [cm[1,0]]  \n",
+    "- High recall ensures most malignant cases are detected, which is critical for clinical use.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 6. Overfitting Discussion\n",
+    "\n",
+    "- Training accuracy = **0.9677**  \n",
+    "- Validation accuracy = **0.9737**  \n",
+    "- Test accuracy = **0.8947**  \n",
+    "- PCA (10 components) yielded test accuracy: **0.9211**\n",
+    "- No significant overfitting observed.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 7. Visualizations\n",
+    "\n",
+    "- **Confusion Matrix Heatmap**: Showed classification performance.\n",
+    "- **Validation Accuracy Plot**: Guided K selection.\n",
+    "- **2D PCA Plot**: Confirmed class separability.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 8. Conclusion\n",
+    "\n",
+    "The KNN model (**K=2**) achieved a test accuracy of **0.8947**. No significant overfitting was observed, indicating good generalization, and high recall ensures reliable malignant detection.\n",
+    "\n",
+    "**Future improvements**:\n",
+    "- Test other algorithms (e.g., Random Forest, SVM)\n",
+    "- Use feature selection (e.g., recursive feature elimination)\n",
+    "- Collect more data or apply augmentation\n",
+    "- Analyze false negatives to enhance clinical reliability\n"
    ]
   }
  ],
